tests/lean/by_contradiction.lean.expected.out
a b : ℕ,
_x : a ≠ b,
H : a = b
⊢ false
-------
a b : ℕ,
_x : ¬¬a = b,
H : ¬a = b
⊢ false
-------
by_contradiction.lean:22:3: error: tactic by_contradiction failed, target is not a negation nor a decidable proposition (remark: when 'local attribute [instance] classical.prop_decidable' is used, all propositions are decidable)
state:
p q : Prop,
_x : ¬¬p
⊢ p
-------
p q : Prop,
_x : ¬¬p,
H : ¬p
⊢ false
